Fix list item spacing

--- a/styles.css
+++ b/styles.css
@@ -186,6 +186,10 @@ ul {
   border: 1px solid #FFC30C;
 }
 
+.list-item {
+  width: 80%;
+}
+
 .list-item input[type="checkbox"] {
   display: none;
 }
@@ -193,25 +197,21 @@ ul {
 .list-item input[type="checkbox"]+label {
   background: url('images/checkbox.svg') no-repeat;
   color: #1F1F3D;
-  margin-bottom: 30px;
-  margin-top: 30px;
-  height: 20px;
-  width:20px;
- 
+  height: 10px;
+  width:10px;
 }
 
 .list-item input[type="checkbox"]:checked + label {
   background: url('images/checkbox-active.svg'); 
   color: #1F1F3D;
-  height: 20px;
-  width: 20px;
+  height: 15px;
+  width: 15px;
 }
 
 .card-todo-item {
   margin: 10px;
   padding-left: 30px;
 }
-
 
 .card-header {
   align-items: flex-start;
@@ -228,7 +228,6 @@ ul {
 }
 
 .card-body {
-  align-items: flex-start;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -237,11 +236,12 @@ ul {
 }
 
 .card-list {
+  align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-evenly;
   width: 100%;
-}
-
-.list-item {
-  width: 80%;
 }
 
 .card-footer {
@@ -258,12 +258,6 @@ ul {
 
 .card-todo-item {
   width: 100%;
-}
-
-.done-icon {
-  background-image: url('images/delete.svg');
-  background-color: transparent;
-  height: 15px;
 }
 
 h6{
